// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingScreenContent should match the snapshot with title, a subtitle, header hidden 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  DUMMY ROUTE
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        edges={
                          {
                            "bottom": "additive",
                            "left": "additive",
                            "right": "additive",
                            "top": "additive",
                          }
                        }
                        style={
                          [
                            {
                              "flex": 1,
                              "justifyContent": "center",
                            },
                            {
                              "backgroundColor": "#FFFFFF",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            {
                              "flex": 1,
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flex": 1,
                                "flexDirection": "column",
                                "gap": 24,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <View
                              accessibilityElementsHidden={true}
                              accessible={false}
                              importantForAccessibility="no-hide-descendants"
                            >
                              <View
                                accessibilityHint="Attendi il caricamento del contenuto"
                                accessibilityLabel="Caricamento in corso"
                                accessibilityRole="progressbar"
                                accessible={true}
                                style={
                                  {
                                    "height": 48,
                                    "width": 48,
                                  }
                                }
                                testID="LoadingIndicator"
                              >
                                <View
                                  style={
                                    {
                                      "transform": [
                                        {
                                          "rotateZ": "0deg",
                                        },
                                      ],
                                    }
                                  }
                                  testID="LoadingSpinnerAnimatedTestID"
                                >
                                  <RNSVGSvgView
                                    align="xMidYMid"
                                    bbHeight={48}
                                    bbWidth={48}
                                    fill="none"
                                    focusable={false}
                                    height={48}
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      [
                                        {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        {
                                          "flex": 0,
                                          "height": 48,
                                          "width": 48,
                                        },
                                      ]
                                    }
                                    vbHeight={48}
                                    vbWidth={48}
                                    width={48}
                                  >
                                    <RNSVGGroup
                                      fill={null}
                                      propList={
                                        [
                                          "fill",
                                        ]
                                      }
                                    >
                                      <RNSVGDefs>
                                        <RNSVGLinearGradient
                                          gradient={
                                            [
                                              0,
                                              736995,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-secondHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                        <RNSVGLinearGradient
                                          gradient={
                                            [
                                              0,
                                              -16040221,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-firstHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                      </RNSVGDefs>
                                      <RNSVGGroup
                                        fill={
                                          {
                                            "payload": 4278190080,
                                            "type": 0,
                                          }
                                        }
                                        propList={
                                          [
                                            "strokeWidth",
                                          ]
                                        }
                                        strokeWidth={5}
                                      >
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 45.5 24"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "brushRef": "spinner-secondHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 45.5 24 A 21.5 21.5 0 0 1 2.5 24"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "brushRef": "spinner-firstHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 2.5 22.75"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                              "strokeLinecap",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "payload": 4278927075,
                                              "type": 0,
                                            }
                                          }
                                          strokeLinecap={1}
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "flexDirection": "column",
                                  "gap": 8,
                                }
                              }
                            >
                              <Text
                                accessibilityLabel="Test Content Title"
                                allowFontScaling={true}
                                dynamicTypeRamp="title2"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#2B2E38",
                                      "fontFamily": "Titillio",
                                      "fontSize": 22,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 33,
                                    },
                                    {
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                              >
                                Test Content Title
                              </Text>
                              <Text
                                allowFontScaling={true}
                                dynamicTypeRamp="body"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#555C70",
                                      "fontFamily": "Titillio",
                                      "fontSize": 16,
                                      "fontStyle": "normal",
                                      "fontWeight": "400",
                                      "lineHeight": 24,
                                    },
                                    {
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                              >
                                Test Content Subtitle
                              </Text>
                            </View>
                          </View>
                        </View>
                      </RNCSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`LoadingScreenContent should match the snapshot with title, a subtitle, header shown 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  DUMMY ROUTE
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        edges={
                          {
                            "bottom": "additive",
                            "left": "off",
                            "right": "off",
                            "top": "off",
                          }
                        }
                        style={
                          [
                            {
                              "flex": 1,
                              "justifyContent": "center",
                            },
                            {
                              "backgroundColor": "#FFFFFF",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            {
                              "flex": 1,
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flex": 1,
                                "flexDirection": "column",
                                "gap": 24,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <View
                              accessibilityElementsHidden={true}
                              accessible={false}
                              importantForAccessibility="no-hide-descendants"
                            >
                              <View
                                accessibilityHint="Attendi il caricamento del contenuto"
                                accessibilityLabel="Caricamento in corso"
                                accessibilityRole="progressbar"
                                accessible={true}
                                style={
                                  {
                                    "height": 48,
                                    "width": 48,
                                  }
                                }
                                testID="LoadingIndicator"
                              >
                                <View
                                  style={
                                    {
                                      "transform": [
                                        {
                                          "rotateZ": "0deg",
                                        },
                                      ],
                                    }
                                  }
                                  testID="LoadingSpinnerAnimatedTestID"
                                >
                                  <RNSVGSvgView
                                    align="xMidYMid"
                                    bbHeight={48}
                                    bbWidth={48}
                                    fill="none"
                                    focusable={false}
                                    height={48}
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      [
                                        {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        {
                                          "flex": 0,
                                          "height": 48,
                                          "width": 48,
                                        },
                                      ]
                                    }
                                    vbHeight={48}
                                    vbWidth={48}
                                    width={48}
                                  >
                                    <RNSVGGroup
                                      fill={null}
                                      propList={
                                        [
                                          "fill",
                                        ]
                                      }
                                    >
                                      <RNSVGDefs>
                                        <RNSVGLinearGradient
                                          gradient={
                                            [
                                              0,
                                              736995,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-secondHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                        <RNSVGLinearGradient
                                          gradient={
                                            [
                                              0,
                                              -16040221,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-firstHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                      </RNSVGDefs>
                                      <RNSVGGroup
                                        fill={
                                          {
                                            "payload": 4278190080,
                                            "type": 0,
                                          }
                                        }
                                        propList={
                                          [
                                            "strokeWidth",
                                          ]
                                        }
                                        strokeWidth={5}
                                      >
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 45.5 24"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "brushRef": "spinner-secondHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 45.5 24 A 21.5 21.5 0 0 1 2.5 24"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "brushRef": "spinner-firstHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 2.5 22.75"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                              "strokeLinecap",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "payload": 4278927075,
                                              "type": 0,
                                            }
                                          }
                                          strokeLinecap={1}
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "flexDirection": "column",
                                  "gap": 8,
                                }
                              }
                            >
                              <Text
                                accessibilityLabel="Test Content Title"
                                allowFontScaling={true}
                                dynamicTypeRamp="title2"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#2B2E38",
                                      "fontFamily": "Titillio",
                                      "fontSize": 22,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 33,
                                    },
                                    {
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                              >
                                Test Content Title
                              </Text>
                              <Text
                                allowFontScaling={true}
                                dynamicTypeRamp="body"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#555C70",
                                      "fontFamily": "Titillio",
                                      "fontSize": 16,
                                      "fontStyle": "normal",
                                      "fontWeight": "400",
                                      "lineHeight": 24,
                                    },
                                    {
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                              >
                                Test Content Subtitle
                              </Text>
                            </View>
                          </View>
                        </View>
                      </RNCSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`LoadingScreenContent should match the snapshot with title, no children, header hidden 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  DUMMY ROUTE
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        edges={
                          {
                            "bottom": "additive",
                            "left": "additive",
                            "right": "additive",
                            "top": "additive",
                          }
                        }
                        style={
                          [
                            {
                              "flex": 1,
                              "justifyContent": "center",
                            },
                            {
                              "backgroundColor": "#FFFFFF",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            {
                              "flex": 1,
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flex": 1,
                                "flexDirection": "column",
                                "gap": 24,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <View
                              accessibilityElementsHidden={true}
                              accessible={false}
                              importantForAccessibility="no-hide-descendants"
                            >
                              <View
                                accessibilityHint="Attendi il caricamento del contenuto"
                                accessibilityLabel="Caricamento in corso"
                                accessibilityRole="progressbar"
                                accessible={true}
                                style={
                                  {
                                    "height": 48,
                                    "width": 48,
                                  }
                                }
                                testID="LoadingIndicator"
                              >
                                <View
                                  style={
                                    {
                                      "transform": [
                                        {
                                          "rotateZ": "0deg",
                                        },
                                      ],
                                    }
                                  }
                                  testID="LoadingSpinnerAnimatedTestID"
                                >
                                  <RNSVGSvgView
                                    align="xMidYMid"
                                    bbHeight={48}
                                    bbWidth={48}
                                    fill="none"
                                    focusable={false}
                                    height={48}
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      [
                                        {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        {
                                          "flex": 0,
                                          "height": 48,
                                          "width": 48,
                                        },
                                      ]
                                    }
                                    vbHeight={48}
                                    vbWidth={48}
                                    width={48}
                                  >
                                    <RNSVGGroup
                                      fill={null}
                                      propList={
                                        [
                                          "fill",
                                        ]
                                      }
                                    >
                                      <RNSVGDefs>
                                        <RNSVGLinearGradient
                                          gradient={
                                            [
                                              0,
                                              736995,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-secondHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                        <RNSVGLinearGradient
                                          gradient={
                                            [
                                              0,
                                              -16040221,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-firstHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                      </RNSVGDefs>
                                      <RNSVGGroup
                                        fill={
                                          {
                                            "payload": 4278190080,
                                            "type": 0,
                                          }
                                        }
                                        propList={
                                          [
                                            "strokeWidth",
                                          ]
                                        }
                                        strokeWidth={5}
                                      >
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 45.5 24"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "brushRef": "spinner-secondHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 45.5 24 A 21.5 21.5 0 0 1 2.5 24"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "brushRef": "spinner-firstHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 2.5 22.75"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                              "strokeLinecap",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "payload": 4278927075,
                                              "type": 0,
                                            }
                                          }
                                          strokeLinecap={1}
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "flexDirection": "column",
                                  "gap": 8,
                                }
                              }
                            >
                              <Text
                                accessibilityLabel="Test Content Title"
                                allowFontScaling={true}
                                dynamicTypeRamp="title2"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#2B2E38",
                                      "fontFamily": "Titillio",
                                      "fontSize": 22,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 33,
                                    },
                                    {
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                              >
                                Test Content Title
                              </Text>
                            </View>
                          </View>
                        </View>
                      </RNCSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`LoadingScreenContent should match the snapshot with title, no children, header shown 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  DUMMY ROUTE
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        edges={
                          {
                            "bottom": "additive",
                            "left": "off",
                            "right": "off",
                            "top": "off",
                          }
                        }
                        style={
                          [
                            {
                              "flex": 1,
                              "justifyContent": "center",
                            },
                            {
                              "backgroundColor": "#FFFFFF",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            {
                              "flex": 1,
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flex": 1,
                                "flexDirection": "column",
                                "gap": 24,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <View
                              accessibilityElementsHidden={true}
                              accessible={false}
                              importantForAccessibility="no-hide-descendants"
                            >
                              <View
                                accessibilityHint="Attendi il caricamento del contenuto"
                                accessibilityLabel="Caricamento in corso"
                                accessibilityRole="progressbar"
                                accessible={true}
                                style={
                                  {
                                    "height": 48,
                                    "width": 48,
                                  }
                                }
                                testID="LoadingIndicator"
                              >
                                <View
                                  style={
                                    {
                                      "transform": [
                                        {
                                          "rotateZ": "0deg",
                                        },
                                      ],
                                    }
                                  }
                                  testID="LoadingSpinnerAnimatedTestID"
                                >
                                  <RNSVGSvgView
                                    align="xMidYMid"
                                    bbHeight={48}
                                    bbWidth={48}
                                    fill="none"
                                    focusable={false}
                                    height={48}
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      [
                                        {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        {
                                          "flex": 0,
                                          "height": 48,
                                          "width": 48,
                                        },
                                      ]
                                    }
                                    vbHeight={48}
                                    vbWidth={48}
                                    width={48}
                                  >
                                    <RNSVGGroup
                                      fill={null}
                                      propList={
                                        [
                                          "fill",
                                        ]
                                      }
                                    >
                                      <RNSVGDefs>
                                        <RNSVGLinearGradient
                                          gradient={
                                            [
                                              0,
                                              736995,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-secondHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                        <RNSVGLinearGradient
                                          gradient={
                                            [
                                              0,
                                              -16040221,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-firstHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                      </RNSVGDefs>
                                      <RNSVGGroup
                                        fill={
                                          {
                                            "payload": 4278190080,
                                            "type": 0,
                                          }
                                        }
                                        propList={
                                          [
                                            "strokeWidth",
                                          ]
                                        }
                                        strokeWidth={5}
                                      >
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 45.5 24"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "brushRef": "spinner-secondHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 45.5 24 A 21.5 21.5 0 0 1 2.5 24"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "brushRef": "spinner-firstHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 2.5 22.75"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                              "strokeLinecap",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "payload": 4278927075,
                                              "type": 0,
                                            }
                                          }
                                          strokeLinecap={1}
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "flexDirection": "column",
                                  "gap": 8,
                                }
                              }
                            >
                              <Text
                                accessibilityLabel="Test Content Title"
                                allowFontScaling={true}
                                dynamicTypeRamp="title2"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#2B2E38",
                                      "fontFamily": "Titillio",
                                      "fontSize": 22,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 33,
                                    },
                                    {
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                              >
                                Test Content Title
                              </Text>
                            </View>
                          </View>
                        </View>
                      </RNCSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
